# prefect-vs-airflow

./: .gitignore  LICENSE  README.md
airflow/: Dockerfile.airflow  docker-compose.yml
airflow/src/: fakeapi_dag.py
airflow/src/config/: airflow_config.py
airflow/src/dags/: example_hdfs.py  fakeapi_dag.py
airflow/src/plugins/: task_failure_notify.py
fakeapi/: Dockerfile  main.py  pyproject.toml
monitoring/: docker-compose.yaml  main.py  pyproject.toml
prefect/: Dockerfile.prefect  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
prefect/prefect/: entrypoint.sh  flow_fakeapi.py  flow_kafka_hdfs_hive.py
prefect/prefect/utils/: setup-discord.py  setup-hive.py
prefect/src/: dag_deliverable.py  deploy_docker_existing_image.py  flow_hdfs.py  flow_hive.py  flow_kafka.py  flow_random.py
prefect/src/utils/: setup-hive.py
